Calculate position over image div

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <span id="s1"></span>
+              <span id="s2"></span>
+            </div>
+          </div>
         </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
