--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <span id="s1"></span>
-              <span id="s2"></span>
+              <span id="s1"></span></br>
+              <span id="s2"></span></br>
+              <span id="s3"></span></br>
+              <span id="s4"></span></br>
+              <span id="s5"></span></br>
+              <span id="s6"></span></br>
             </div>
           </div>
         </div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery-1.11.1.min.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
